springcloud-demo/k8s-sample/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-sample
  labels:
    name: k8s-sample
spec:
  selector:
    matchLabels:
      app: k8s-sample
  template:
    metadata:
      labels:
        app: k8s-sample
    spec:
      containers:
        - name: k8s-sample
          image: k8s-sample:v1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 18088
      serviceAccountName: k8s-sample-account
#          volumeMounts:
#            - name: config-volume
#              mountPath: /workspace/config
#      volumes:
#        - name: config-volume
#          configMap:
#            name: k8s-sample # 指定要使用的configmap名称
