springcloud-demo/k8s-sample/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-sample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-sample-service
                port:
                  number: 18088
